[package]
name = "hft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
futures = "0.3"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tokio-tungstenite = "0.28"
tungstenite = "0.28"
